[package]
name = "bulkssrf"
version = "0.1.0"
authors = ["Junn <likesgophers@gmail.com>"]
edition = "2018"

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "bssrf"

[dependencies]
surf = "2.0.0-alpha.4"
clap = "2.33.1"
futures = "0.3.5"
http-types = "2.2.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"

[profile.release]
debug = true
