[package]
name = "bulkssrf"
version = "0.1.0"
authors = ["Junn <likesgophers@gmail.com>"]
edition = "2018"

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "bssrf"

[dependencies]
clap = "2.33.1"
futures = "0.3.5"
http-types = "2.2.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
